--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -16,6 +16,7 @@
 @use './components/hamburger';
 @use './components/header';
 @use './components/mobile-menu';
+@use './components/input';
 // @use './components/hero-home';
 // @use './components/team-members';
 // @use './components/video-carousel';
