single page template

--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -11,6 +11,7 @@
 @use './pages/default';
 @use './pages/team-members';
 @use './pages/archive';
+@use './pages/single';
 
 @use './components/alert';
 @use './components/hamburger';
