--- a/plugins/faqs/src/faqs/style.scss
+++ b/plugins/faqs/src/faqs/style.scss
@@ -5,8 +5,11 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-bwp-faqs {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+
+.c-faqs {
+	.c-faqs__heading {
+		font-size: 23px;
+		font-weight: 600;
+		font-family: var(--font-body);
+	}
 }
