--- a/plugins/faqs-item/src/faqs-item/style.scss
+++ b/plugins/faqs-item/src/faqs-item/style.scss
@@ -34,14 +34,23 @@
 		justify-content: center;
 		align-items: center;
 		position: absolute;
-		top: 15px;
+		top: 11px;
 		right: 15px;
+		transition: transform 0.3s ease-in-out;
+
+		.faq-open & {
+			transform: rotate(90deg);
+		}
 
 		svg {
 			width: 19px;
 			height: 14px;
 			fill: #fff;
 		}
+	}
+
+	&__header {
+		cursor: pointer;
 	}
 
 	.c-faqs-item__heading {
@@ -51,7 +60,16 @@
 		margin-bottom: 0;
 	}
 
-	&__content-area {
-		padding-bottom: 30px;
+	.c-faqs-item__content-area {
+		// padding-bottom: 30px;
+		height: 0;
+		overflow: hidden;
+		transition: height 0.3s ease-in-out;
+
+		>* {
+			&:last-child {
+				margin-bottom: 30px;
+			}
+		}
 	}
 }
