Fixed editor styles

--- a/plugins/faqs-item/src/faqs-item/editor.scss
+++ b/plugins/faqs-item/src/faqs-item/editor.scss
@@ -4,3 +4,8 @@
  * Replace them with your own styles or remove the file completely.
  */
 
+.c-faqs-item {
+	.c-faqs-item__content-area {
+		height: auto;
+	}
+}
