--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -18,6 +18,7 @@
 @use './components/header';
 @use './components/mobile-menu';
 @use './components/input';
+@use './components/policy';
 // @use './components/hero-home';
 // @use './components/team-members';
 // @use './components/video-carousel';
