--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -86,6 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   --font-team-members-item-heading: 30px;
   --font-team-members-item-role: 17px;
   --font-heading-cta: 60px;
+  --font-para-lead: 23px;
   --font-button: 22px;
   --padding-button: 6px 25px;
   --spacing-block: 110px;
@@ -129,6 +130,7 @@ h1, h2, h3, h4, h5, h6 {
     --font-section-heading: 68px;
     --font-page-hero-heading: 74px;
     --font-heading-cta: 52px;
+    --font-para-lead: 21px;
     --border-radius-large: 50px;
     --border-radius-small: 35px;
     --font-team-members-item-heading: 28px;
@@ -149,6 +151,7 @@ h1, h2, h3, h4, h5, h6 {
     --font-section-heading: 60px;
     --font-page-hero-heading: 65px;
     --font-heading-cta: 48px;
+    --font-para-lead: 20px;
     --font-page-hero-lead: 19px;
     --font-team-members-item-heading: 26px;
     --font-team-members-item-role: 14px;
