added media block

--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -231,6 +231,7 @@ body {
 
 .d-typography {
   >p {
+    font-family: var(--font-body);
     margin-top: 5px;
     margin-bottom: var(--spacing-para);
 
