--- a/plugins/media-block/src/media-block/style.scss
+++ b/plugins/media-block/src/media-block/style.scss
@@ -5,8 +5,15 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-bwp-media-block {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+
+.c-media-block {
+	&.c-media-block__columntype {
+		&--double {
+			.c-media-block__items {
+				display: grid;
+				grid-template-columns: repeat(2, minmax(0, 1fr));
+				gap: var(--spacing-header);
+			}
+		}
+	}
 }
