--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -346,13 +346,13 @@ h2 {
 
 .border-radius {
   &__top {
-    border-top-left-radius: 60px;
-    border-top-right-radius: 60px;
+    border-top-left-radius: var(--border-radius-large);
+    border-top-right-radius: var(--border-radius-large);
   }
 
   &__bottom {
-    border-bottom-left-radius: 60px;
-    border-bottom-right-radius: 60px;
+    border-bottom-left-radius: var(--border-radius-large);
+    border-bottom-right-radius: var(--border-radius-large);
   }
 }
 
