Added news feed styles

--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -25,5 +25,5 @@
 @use './components/arrows';
 @use './components/insta';
 // @use './components/media-text';
-// @use './components/news-feed';
+@use './components/news-feed__card';
 @use './components/footer';
