--- a/plugins/news-feed/src/news-feed/style.scss
+++ b/plugins/news-feed/src/news-feed/style.scss
@@ -5,6 +5,8 @@
  * Replace them with your own styles or remove the file completely.
  */
 
+@use '../../../../themes/achieve-arts/src/scss/components/news-feed__card';
+
 .c-news-feed {
   &__inner {
     background-color: var(--brand-6);
@@ -45,61 +47,61 @@
     font-size: var(--font-news-feed-heading);
   }
 
-  &__card {
-    background-color: #F3E0FF;
-    border-radius: 30px;
-    overflow: hidden;
-    width: 435px;
+  // &__card {
+  //   background-color: #F3E0FF;
+  //   border-radius: 30px;
+  //   overflow: hidden;
+  //   width: 435px;
 
-    &--media {
-      position: relative;
-      aspect-ratio: 5 / 3.5;
-      border-bottom-left-radius: 30px;
-      border-bottom-right-radius: 30px;
-      overflow: hidden;
+  //   &--media {
+  //     position: relative;
+  //     aspect-ratio: 5 / 3.5;
+  //     border-bottom-left-radius: 30px;
+  //     border-bottom-right-radius: 30px;
+  //     overflow: hidden;
       
-      picture,
-      img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
+  //     picture,
+  //     img {
+  //       display: block;
+  //       width: 100%;
+  //       height: 100%;
+  //       object-fit: cover;
+  //     }
+  //   }
 
-    .c-news-feed__card--tab {
-      position: absolute;
-      top: 20px;
-      left: 30px;
-      min-width: 150px;
-      background-color: var(--brand-1);
-    }
+  //   .c-news-feed__card--tab {
+  //     position: absolute;
+  //     top: 20px;
+  //     left: 30px;
+  //     min-width: 150px;
+  //     background-color: var(--brand-1);
+  //   }
 
-    &--header {
-      margin-bottom: 10px;
-    }
+  //   &--header {
+  //     margin-bottom: 10px;
+  //   }
 
-    &--heading {
-      font-size: var(--font-news-feed-item-heading);
-      font-weight: 600;
-    }
+  //   &--heading {
+  //     font-size: var(--font-news-feed-item-heading);
+  //     font-weight: 600;
+  //   }
 
 
 
-    &--content {
-      padding: 22px 30px 50px 30px;
+  //   &--content {
+  //     padding: 22px 30px 50px 30px;
 
-      p {
-        font-size: var(--font-news-feed-item-content);
-        font-weight: 400;
-        width: 90%;
-      }
-    }
+  //     p {
+  //       font-size: var(--font-news-feed-item-content);
+  //       font-weight: 400;
+  //       width: 90%;
+  //     }
+  //   }
 
-    a {
-      color: #1A1919;
-      font-weight: 600;
-      text-decoration: none;
-    }
-  }
+  //   a {
+  //     color: #1A1919;
+  //     font-weight: 600;
+  //     text-decoration: none;
+  //   }
+  // }
 }
