--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -12,6 +12,7 @@
 @use './pages/team-members';
 @use './pages/archive';
 @use './pages/single';
+@use './pages/basic';
 
 @use './components/alert';
 @use './components/hamburger';
