--- a/plugins/panel/src/panel/style.scss
+++ b/plugins/panel/src/panel/style.scss
@@ -16,13 +16,19 @@
   &__content {
     text-align: center;
     margin-bottom: var(--spacing-header);
+
+    &--header {
+      max-width: 1060px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
   &__items {
     position: relative;
     z-index: 2;
     >* {
-      max-width: 800px;
+      max-width: 1060px;
       margin-left: auto;
       margin-right: auto;
 
@@ -53,9 +59,9 @@
 
   &__container {
     position: relative;
-    max-width: var(--max-width-media-text);
-    margin-left: auto;
-    margin-right: auto;
+    // max-width: var(--max-width-media-text);
+    // margin-left: auto;
+    // margin-right: auto;
     padding-left: var(--container-padding-content);
     padding-right: var(--container-padding-content);
   }
