--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -20,6 +20,7 @@
 @use './components/mobile-menu';
 @use './components/input';
 @use './components/policy';
+@use './components/contact-pane';
 // @use './components/hero-home';
 // @use './components/team-members';
 // @use './components/video-carousel';
