--- a/plugins/inner-panel/src/inner-panel/style.scss
+++ b/plugins/inner-panel/src/inner-panel/style.scss
@@ -34,5 +34,18 @@
 				width: inherit;
 			}
 		}
+
+		&.d-typography {
+			h1,
+			h2,
+			h3,
+			h4,
+			h5,
+			h6 {
+				font-family: var(--font-body);
+				font-size: var(--font-para-lead);
+				font-weight: 600;
+			}
+		}
 	}
 }
