Added home animations

--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -7,6 +7,7 @@
 @use './defaults/site-defaults';
 @use './helper/tab';
 @use './helper/button';
+@use './helper/animations';
 
 @use './pages/default';
 @use './pages/team-members';
