--- a/plugins/panel/src/panel/style.scss
+++ b/plugins/panel/src/panel/style.scss
@@ -11,6 +11,10 @@
   padding-left: 0;
   padding-right: 0;
 
+  &.has-text-align-center {
+    text-align: center;
+  }
+
   &__content {
     text-align: center;
     margin-bottom: var(--spacing-header);
@@ -20,6 +24,11 @@
       margin-left: auto;
       margin-right: auto;
     }
+  }
+
+  &.has-text-align-center &__content--header {
+    display: flex;
+    justify-content: center;
   }
 
   &__items {
