--- a/plugins/media-carousel-item/src/media-carousel-item/style.scss
+++ b/plugins/media-carousel-item/src/media-carousel-item/style.scss
@@ -244,3 +244,77 @@
     opacity: 0.4;
   }
 }
+
+
+.c-video-modal[hidden] {
+	display: none;
+}
+
+.c-video-modal {
+	position: fixed;
+	inset: 0;
+	z-index: 9999;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.c-video-modal__backdrop {
+	position: absolute;
+	inset: 0;
+	background: rgba(0,0,0,0.7);
+}
+
+.c-video-modal__close {
+	position: absolute;
+	top: 40px;
+	right: 40px;
+	background: none;
+	border: none;
+	cursor: pointer;
+	z-index: 2;
+	width: 40px;
+	height: 40px;
+
+	span {
+		display: block;
+		width: 40px;
+		height: 2px;
+		background-color: #fff;
+		position: absolute;
+		top: 50%;
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		pointer-events: none;
+
+		&:nth-child(1) {
+			transform: translateY(-50%) rotate(-45deg);
+		}
+
+		&:nth-child(2) {
+			transform: translateY(-50%) rotate(45deg);
+		}
+	}
+}
+
+.c-video-modal__dialog {
+	position: relative;
+	background: #000;
+	max-width: 960px;
+	width: 90%;
+	aspect-ratio: 16 / 9;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.c-video-modal__video {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
+
+
+
