--- a/plugins/media-carousel-item/src/media-carousel-item/style.scss
+++ b/plugins/media-carousel-item/src/media-carousel-item/style.scss
@@ -42,6 +42,14 @@
 		z-index: 2;
 		top: 0;
 		left: 0;
+
+		@include abstracts.respond-to('laptop') { 
+			padding: 40px;
+    }
+
+		@include abstracts.respond-to('tablet') { 
+			padding: 40px 30px;
+    }
 	}
 
 	&__container {
@@ -81,7 +89,29 @@
 
 	.c-media-carousel-item__heading {
 		font-weight: 800;
-		font-size: var(--font-h3);
+		font-size: var(--font-hero-home-heading);
+	}
+
+	.wp-block-button__link {
+		position: relative;
+		padding-right: 55px;
+		min-width: 230px;
+	}
+
+	&__play-icon {
+		display: inline-block;
+		width: 50px;
+		height: 50px;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		right: 5px;
+
+		svg {
+			width: 100%;
+			height: 100%;
+			fill: var(--brand-1);
+		}
 	}
 }
 
