policies archive changes

--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -403,7 +403,8 @@ h2 {
 
 .page-template-page-basic,
 .post-template-default,
-.page-template-page-contact {
+.page-template-page-contact,
+.page-template-page-policies {
   background-color: #000;
 }
 
