--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -415,7 +415,9 @@ h2 {
 .page-template-page-basic,
 .post-template-default,
 .page-template-page-contact,
-.page-template-page-policies-archive {
+.page-template-page-policies-archive,
+.page-template-page-testimonials {
   background-color: #000;
 }
+
 
