--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -14,6 +14,7 @@
 @use './pages/archive';
 @use './pages/single';
 @use './pages/basic';
+@use './pages/testimonials';
 
 @use './components/alert';
 @use './components/hamburger';
