--- a/plugins/panel/src/panel/style.scss
+++ b/plugins/panel/src/panel/style.scss
@@ -55,11 +55,11 @@
     }
 
     >h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
+    >h2,
+    >h3,
+    >h4,
+    >h5,
+    >h6 {
       font-size: 45px;
       font-family: var(--font-body);
       font-weight: 600;
