--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6 {
   --brand-7: #292929;
   --brand-8: #D6A3FC;
   --text-tab: 0.688rem;
-  --text-tab-padding: 0.25rem 1.5rem;
+  --text-tab-padding: 0.25rem 2rem;
   --text-tab-letter-spacing: 0.063rem;
 
   --font-heading: trade-gothic-next-condensed, sans-serif;
@@ -208,7 +208,7 @@ body {
   font-family: var(--font-body);
   font-size: 1.125rem;
   font-weight: 400;
-  line-height: 1.3;
+  line-height: 1.4;
 }
 
 address {
@@ -416,7 +416,8 @@ h2 {
 .post-template-default,
 .page-template-page-contact,
 .page-template-page-policies-archive,
-.page-template-page-testimonials {
+.page-template-page-testimonials,
+.single-team-members {
   background-color: #000;
 }
 
