added back button to panel

--- a/plugins/panel/src/panel/style.scss
+++ b/plugins/panel/src/panel/style.scss
@@ -97,6 +97,12 @@
     position: relative;
   }
 
+  &__back {
+    position: absolute;
+    top: var(--spacing-header);
+    right: var(--spacing-header);
+  }
+
   &__star {
     display: none;
 
