Updated news feed item

--- a/themes/achieve-arts/src/scss/components/_news-feed__card.scss
+++ b/themes/achieve-arts/src/scss/components/_news-feed__card.scss
@@ -34,6 +34,7 @@
 
     &--heading {
       font-size: var(--font-news-feed-item-heading);
+      font-family: var(--font-body);
       font-weight: 600;
     }
 
