--- a/plugins/media-text/src/media-text/style.scss
+++ b/plugins/media-text/src/media-text/style.scss
@@ -171,7 +171,7 @@
 	.c-media-text__content-area {
     p {
       a {
-        color: #fff;
+        color: var(--brand-5);
       }
     }
     .wp-block-buttons {
