team member card link

--- a/plugins/team-members-item/src/team-members-item/editor.scss
+++ b/plugins/team-members-item/src/team-members-item/editor.scss
@@ -3,3 +3,18 @@
  *
  * Replace them with your own styles or remove the file completely.
  */
+
+
+ .c-team-members-item__input-area {
+  .block-editor-link-control,
+  .block-editor-url-input {
+    margin-left: 0;
+    margin-right: 0;
+    min-width: 100%;
+  }
+
+  .block-editor-link-control__search-item {
+    padding-left: 0;
+    padding-right: 0;
+  }
+ }
