--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -44,6 +44,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 :root {
+  scroll-behavior: smooth;
   font-size: 16px;
   --brand-1: #460875;
   --brand-2: #884DB6;
