--- a/plugins/team-members/src/team-members/style.scss
+++ b/plugins/team-members/src/team-members/style.scss
@@ -52,6 +52,9 @@
     gap: 15px;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 1160px;
+    margin-left: auto;
+    margin-right: auto;
 
   }
 
