--- a/plugins/media-text/src/media-text/style.scss
+++ b/plugins/media-text/src/media-text/style.scss
@@ -57,6 +57,7 @@
     position: relative;
     z-index: 1;
     max-width: var(--max-width-media-text);
+    box-sizing: content-box;
     margin-left: auto;
     margin-right: auto;
 
@@ -160,6 +161,38 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+      }
+    }
+  }
+
+  &.c-media-text__media-text-map {
+    .c-media-text__item--media {
+      transform: rotate(0);
+      aspect-ratio: 4 / 3.5;
+      border-radius: var(--border-radius-small);
+      overflow: hidden;
+      width: 55%;
+      position: relative;
+
+      @include abstracts.respond-to('tablet') { 
+        width: 100%;
+      }
+
+      .wp-block-button {
+        position: absolute;
+        top: 24px;
+        right: 32px;
+        z-index: 2;
+      }
+
+      .c-media-text__map {
+        width: 100%;
+        height: 100%;
+
+        &-canvas {
+          width: inherit;
+          height: inherit;
+        }
       }
     }
   }
