--- a/plugins/media-text/src/media-text/style.scss
+++ b/plugins/media-text/src/media-text/style.scss
@@ -183,6 +183,11 @@
         top: 24px;
         right: 32px;
         z-index: 2;
+
+        @include abstracts.respond-to('desktop') { 
+          top: 15px;
+          right: 24px;
+        }
       }
 
       .c-media-text__map {
