--- a/themes/achieve-arts/src/scss/components/_insta.scss
+++ b/themes/achieve-arts/src/scss/components/_insta.scss
@@ -20,14 +20,15 @@
 
     &--follow {
       max-width: 860px;
-      height: 96px;
+      min-height: 96px;
       border-radius: 50px;
       margin-left: auto;
       margin-right: auto;
       background-color: var(--brand-6);
       color: #fff;
-      font-size: var(--font-insta-follow);
+      font-size: 40px;
       font-family: var(--font-heading);
+      line-height: 1;
       text-transform: uppercase;
       font-weight: 800;
       display: flex;
@@ -35,6 +36,18 @@
       align-items: center;
       padding: 8px;
       text-align: center;
+
+      @include abstracts.respond-to('desktop') { 
+        font-size: 36px;
+      }
+
+      @include abstracts.respond-to('tablet') { 
+        font-size: 30px;
+      }
+
+      @include abstracts.respond-to('mobile') { 
+        font-size: 26px;
+      }
 
       a {
         text-decoration: none;
@@ -70,6 +83,12 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+
+    @include abstracts.respond-to('tablet') { 
+      width: 46px;
+      height: 46px;
+      padding: 10px;
+    }
 
     &--left {
             
